<resources>
    <string name="app_name">삼소</string>
    <string name="loading">로딩중</string>
    <string name="home">홈</string>
    <string name="theater">영화관</string>
    <string name="bus">버스</string>
    <string name="notice">알림</string>
    <string name="inspected_human">확진자</string>
    <string name="current">현재</string>
    <string name="count">명</string>
    <string name="cured">해제</string>
    <string name="total">누적</string>
    <string name="new_inspect">신규</string>
    <string name="sicker">자가격리자</string>
    <string name="current_sicker">자가격리중</string>
    <string name="checking">검사중</string>
    <string name="negative_judge">음성판정</string>
    <string name="suspicious_human">자가격리자</string>
    <string name="corona_info_title">삼척시 코로나 정보</string>
    <string name="finish_for_more_click">한번 더 누르시면 앱을 종료 합니다.</string>
    <string name="bus_type_1">삼척 ↔ 시내</string>
    <string name="bus_type_2">삼척 ↔ 여삼, 근덕, 장호, 호산</string>
    <string name="bus_type_3">삼척 ↔ 도계, 환선굴, 하장, 미로</string>
    <string name="bus_type_4">삼척 ↔ 동해</string>
    <string name="bus_type_5">도계 ↔ 흥전항, 점리, 황조, 도계캠퍼스</string>
    <string name="bus_type_6">호산 ↔ 고포, 길곡, 이천  →  풍곡, 연화, 동활</string>
    <string name="see_detail">자세히 보기</string>
    <string name="see_staion_list">노선도 보기</string>
    <string name="station_route">노선도</string>
    <string name="fail_load_data">데이터를 불러오는데 실패하였습니다.</string>
    <string name="notice_update">업데이트 알림</string>
    <string name="notice_message">새로운 버전으로 업데이트가 필요합니다.\n플레이스토어를 확인해주세요.</string>
    <string name="category">카테고리</string>
    <string name="schedule">일정</string>
    <string name="office_phone">관공서\n전화번호</string>
    <string name="comming_soon">comming\nsoon</string>

    <string name="day_1">일</string>
    <string name="day_2">월</string>
    <string name="day_3">화</string>
    <string name="day_4">수</string>
    <string name="day_5">목</string>
    <string name="day_6">금</string>
    <string name="day_7">토</string>

    <string name="month">월</string>
    <string name="day">일</string>

    <string name="buildCreateAt">건축년도</string>
    <string name="deal_date">계약일</string>
    <string name="dong">법정동</string>
    <string name="monthly_fee">월새금액</string>
    <string name="deposit_fee">보증금액</string>
    <string name="building_size">전용면적</string>
    <string name="floor">층</string>
    <string name="real_estate">전월세</string>
    <string name="not_found">조회된 항목이 없습니다.</string>
    <string name="real_estate_info_guild">출처 : 국토교통부 전월세 신고자료</string>
    <string name="real_estate_rent_fee">전월세</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>