<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.pager.PagerFragment1">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_rect_radius_16_blue_bg">
        <TextView
            android:id="@+id/item_pager1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/inspected_human"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/item_pager1_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <LinearLayout
                    android:id="@+id/item_pager1_linearlayout_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/item_pager1_current_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue_prim_text_color"
                            android:textSize="22sp"
                            tools:text="2"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:textSize="10sp"
                            android:textColor="@color/black"
                            android:text="@string/count"/>
                    </LinearLayout>

                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="8dp"
                    android:background="@color/blue_sub_text_color"/>

                <LinearLayout
                    android:id="@+id/item_pager1_linearlayout_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cured"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/item_pager1_cured_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue_sub_text_color"
                            android:textSize="22sp"
                            tools:text="2"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            android:text="@string/count"/>
                    </LinearLayout>


                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="8dp"
                    android:background="@color/blue_sub_text_color"/>
                <LinearLayout
                    android:id="@+id/item_pager1_linearlayout_3"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/item_pager1_count_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue_sub_text_color"
                            android:textSize="22sp"
                            tools:text="2"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            android:text="@string/count"/>
                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>