<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/home_logo"
                    android:layout_width="60dp"
                    android:layout_height="68dp"
                    android:src="@drawable/samso_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="삼척소식"
                    android:textColor="@color/blue_500"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/home_logo"
                    app:layout_constraintStart_toEndOf="@+id/home_logo"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/home_corona_info_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/corona_info_title"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/home_logo" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_corona_info_blue"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:background="@drawable/bg_rect_radius_16_blue_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/home_corona_info_title"
                    android:layout_margin="16dp">
                    <TextView
                        android:id="@+id/home_corona_info_blue_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inspected_human"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/home_corona_info_new_inpected_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_inspect"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/home_corona_info_blue_divide"
                        app:layout_constraintTop_toBottomOf="@+id/home_corona_info_blue_title"
                        app:layout_constraintStart_toStartOf="parent"/>
                    <TextView
                        android:id="@+id/home_corona_info_new_inspected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/blue_prim_text_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/home_corona_info_blue_divide"
                        tools:text="260"
                        android:layout_marginTop="4dp"/>
                    <View
                        android:id="@+id/home_corona_info_blue_divide"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/home_corona_info_blue_title"
                        android:background="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginVertical="6dp"/>
                    <TextView
                        android:id="@+id/home_corona_info_sum_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/home_corona_info_blue_divide"
                        app:layout_constraintTop_toTopOf="@+id/home_corona_info_new_inpected_title"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/home_corona_info_sum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/blue_prim_text_color"
                        android:layout_marginTop="4dp"
                        app:layout_constraintStart_toEndOf="@+id/home_corona_info_blue_divide"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="25342명"
                        app:layout_constraintBottom_toBottomOf="@+id/home_corona_info_new_inspected"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_corona_info_green"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:background="@drawable/bg_rect_radius_16_green_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/home_corona_info_blue"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/home_corona_info_green_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/sicker"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:id="@+id/home_corona_info_inspected_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_sicker"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/home_corona_info_green_divide"
                        app:layout_constraintTop_toBottomOf="@+id/home_corona_info_green_title"
                        app:layout_constraintStart_toStartOf="parent"/>
                    <TextView
                        android:id="@+id/home_corona_info_inspected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/green_prim_text_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/home_corona_info_green_divide"
                        tools:text="260"
                        android:layout_marginTop="4dp"/>
                    <View
                        android:id="@+id/home_corona_info_green_divide"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/home_corona_info_green_title"
                        android:background="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginVertical="6dp"/>
                    <TextView
                        android:id="@+id/home_corona_info_cured_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cured"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/home_corona_info_green_divide"
                        app:layout_constraintTop_toTopOf="@+id/home_corona_info_inspected_title"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/home_corona_info_cured"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/green_prim_text_color"
                        android:layout_marginTop="4dp"
                        app:layout_constraintStart_toEndOf="@+id/home_corona_info_green_divide"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="25342명"
                        app:layout_constraintBottom_toBottomOf="@+id/home_corona_info_inspected"/>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/home_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/category"
                    app:layout_constraintTop_toBottomOf="@+id/home_corona_info_green"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_calendar_constraintlayout"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:layout_constraintTop_toBottomOf="@+id/home_category"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/home_calendar_constraintlayout2"
                    android:background="@drawable/bg_rect_stroke_gray">
                    <ImageView
                        android:id="@+id/home_calendar_imageview"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/home_calendar_textview"
                        android:src="@drawable/ic_calendar"/>
                    <TextView
                        android:id="@+id/home_calendar_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule"
                        android:textSize="12sp"
                        app:layout_constraintTop_toBottomOf="@+id/home_calendar_imageview"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_calendar_constraintlayout2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:layout_constraintTop_toBottomOf="@+id/home_category"
                    app:layout_constraintEnd_toStartOf="@+id/home_calendar_constraintlayout3"
                    app:layout_constraintStart_toEndOf="@+id/home_calendar_constraintlayout"
                    android:background="@drawable/bg_rect_stroke_gray">
                    <ImageView
                        android:id="@+id/home_calendar_imageview2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/home_calendar_textview2"
                        android:src="@drawable/ic_real_estate_24"/>
                    <TextView
                        android:id="@+id/home_calendar_textview2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/real_estate_rent_fee"
                        android:gravity="center"
                        android:textSize="12sp"
                        app:layout_constraintTop_toBottomOf="@+id/home_calendar_imageview2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_calendar_constraintlayout3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:layout_constraintTop_toBottomOf="@+id/home_category"
                    app:layout_constraintStart_toEndOf="@+id/home_calendar_constraintlayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/bg_rect_stroke_gray">
                    <ImageView
                        android:id="@+id/home_calendar_imageview3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/home_calendar_textview3"
                        android:src="@drawable/ic_help_24"/>
                    <TextView
                        android:id="@+id/home_calendar_textview3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comming_soon"
                        android:gravity="center"
                        android:textSize="12sp"
                        app:layout_constraintTop_toBottomOf="@+id/home_calendar_imageview3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="ca-app-pub-9955048675507406/6921615196"
                    ads:layout_constraintStart_toStartOf="parent"
                    ads:layout_constraintEnd_toEndOf="parent"
                    ads:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</layout>